music-player/src/components/musicplayer/MusicPlayer.module.css
.player {
    width: 100%;
    border-top: 1px solid #55555599;
    color: #000;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 7vh;
 }

.centersection {
    width: 70%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
 }

.leftsection,
.rightsection {
    display: flex;
    width: 14%;
}

.leftsection {
    justify-content: flex-start;
    
}
.rightsection {
    justify-content: flex-end;
}

.controls {
    display: flex;
    justify-content: space-between;
    margin-top: .5rem;
    margin-bottom: .5rem;
}

.leftsection,
.controls, 
.rightsection {
    color: #bfbfbf;
}

.progress {
    width: 65%;
    height: 15px;
    display: flex;
    justify-content: center;
    accent-color: rgb(0, 200, 0);
    color: #FFF;
}

.music_slider {
    margin: 0 15px;
    width: 100%;
    height: 5px;
    position: relative;
    top: 5px;
}

.volume_slider {
    width: 65%;
    height: 5px;
    display: flex;
    justify-content: center;
    accent-color: rgb(0, 200, 0);
    color: #FFF;
}

span {
    font-size: .7rem;
    height: 5px;
    /* background-color: #fff; */
    display: flex;
    align-items: flex-start;
}

.volume {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #ffffff;
}

.volume_control {
    margin-right: .5rem;
    height: 100%;
}

.shuffle,
.previous,
.play_pause,
.next,
.repeat {
    height: 25px; 
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 10px;
    margin-bottom: 10px;
}

.play_pause {
    height: 30px;
    width: 30px;
    background-color: #FFFFFF;
    border-radius: 200%;
}

.shuffle:hover,
.previous:hover,
.play_pause:hover,
.next:hover,
.repeat:hover   {
    cursor: pointer;
}

BiRepeat:hover {
    cursor: pointer;
}

